# ib-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
extension/: README.md  install.sh  manifest.json  popup.html  settings.html  uninstall.sh
extension/icons/: generate_icons.py
extension/native-host/: com.ib.portfolio_analyzer.json  ib_native_host.py
extension/src/: background.js  popup.css  popup.js  settings.css  settings.js
src/: __init__.py  main.py
src/advisor/: __init__.py  analyzer.py  models.py
src/greeks/: __init__.py  black_scholes.py  calculator.py  models.py
src/ib_client/: __init__.py  client.py  contracts.py  models.py
src/monte_carlo/: __init__.py  models.py  simulator.py
src/visualizer/: __init__.py  charts.py  styles.py
tests/: __init__.py  test_advisor.py  test_greeks.py  test_ib_client.py  test_monte_carlo.py
